fix: Full image should be displayed in container, but not stretched

--- a/src/scss/components/_pdp.scss
+++ b/src/scss/components/_pdp.scss
@@ -2,8 +2,8 @@
 
 .pdp {
   position: relative;
-  width: 90vw;
   height: 513px;
+  width: 1121px;
   left: 112px;
   display: flex;
   margin: 70px 0;
@@ -38,28 +38,17 @@
 
   &-right {
     display: flex;
-    width: 85%;
-    justify-content: space-between;
-
-    &-main-img {
-      margin-left: 40px;
-      width: 500px;
-      height: 400px;
-      object-fit: contain;
-
       img {
-        width: 100%;
-        height: 100%;
+        display: block;
+        margin: 0 100px 0 40px;
 
-      }
-    }
+         }
 
     &-content {
-      width: 292px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
+      width: 292px;
       &__header {
         h2 {
           font-weight: 600;
@@ -89,11 +78,10 @@
         }
 
         &-buttons {
-          margin: 8px 0;
+          margin: 5px 0;
 
           &.capacity {
             margin-top: 7px;
-
             h3 {
               margin-bottom: 7px;
             }
@@ -126,7 +114,7 @@
             cursor: pointer;
             transition: all 0.2s ease-in-out;
             font-family: 'Source Sans Pro', sans-serif;
-            margin: 5px 10px 0 0;
+            margin: 5px 5px 0 0;
 
             &.active {
               background: $text;
@@ -145,8 +133,7 @@
 
       &__colors {
         width: 100%;
-        margin-top: 8px;
-
+        display: flex;
         h3 {
           text-transform: uppercase;
           font-family: 'Roboto Condensed', sans-serif;
@@ -157,7 +144,7 @@
           height: 32px;
           border: 2px solid rgba(0, 0, 0, .4);
           cursor: pointer;
-          margin-right: 8px;
+          margin-right: 2px;
 
           &.active {
             border: 2px solid #5ECE7B;
@@ -167,6 +154,7 @@
       }
 
       &__price {
+        margin-top: 5px;
         h3 {
           margin-bottom: 10px;
           text-transform: uppercase;
